gccida/c3/compute_forward_dependences
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1839:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1839:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1840:4: error: expected ';' after expression
rtx v4; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1840:5: error: use of undeclared identifier 'v4'
rtx v4; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1844:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1844:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1849:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = head; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1852:27: error: use of undeclared identifier 'nonnote_insn'
if ( rtx_class[*( _WORD *)nonnote_insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1856:1: error: use of undeclared identifier 'v4'
v4 = nonnote_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1856:6: error: use of undeclared identifier 'nonnote_insn'
v4 = nonnote_insn; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1857:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( nonnote_insn); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1857:35: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( nonnote_insn); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1860:18: error: use of undeclared identifier 'nonnote_insn'
&& ( *( _DWORD *)nonnote_insn & 0x10000000) != 0 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1859:9: error: use of undeclared identifier 'nonnote_insn'
while ( nonnote_insn 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1861:35: error: use of undeclared identifier 'nonnote_insn'
&& ( unsigned __int16)*( _DWORD *)nonnote_insn != 36 ); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1862:21: error: use of undeclared identifier 'v4'
for ( i = ( __int64)v4[3]; i; i = *( _QWORD *)( i + 16) ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1873:1: error: use of undeclared identifier 'v8'
v8 = alloc_INSN_LIST( v4, h_i_d[v7->fld[0].rtint].depend); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1873:23: error: use of undeclared identifier 'v4'
v8 = alloc_INSN_LIST( v4, h_i_d[v7->fld[0].rtint].depend); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/sched-deps.c:1874:14: error: use of undeclared identifier 'v8'
*( ( _BYTE *)v8 + 2) = *( _BYTE *)( i + 2); 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/compute_forward_dependences/src/obj/sched-deps.o] Error 1
